feat: Project section updated

--- a/about.html
+++ b/about.html
@@ -4,9 +4,43 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
   <title>About | AdarshBalak</title>
 </head>
 <body>
-  <h2>About</h2>
+  <nav class="navigation container">
+  
+    <div class="nav-brand" >IAmDeveloper</div>
+    <ul class="non-bullet nav-pills">
+      <li class="list-item-inline"><a class="link link-active" href="/">Home</a></li>
+      <li class="list-item-inline"><a class="link" href="/project.html">Projects</a></li>
+      <li class="list-item-inline"><a class="link" href="/blogs.html">Blogs</a></li>
+      <li class="list-item-inline"><a class="link" href="/about.html">About</a></li>
+    </ul>
+  </nav>
+  <header > 
+    <div class="container hero">
+      <img class="hero-img"src="/images/aboutImage.svg" alt="Img link broken">
+      <h1 class="hero-heading">About <span class="heading-inverted">Myself</span></h1>
+    </div>
+    </header>
+    <div class="project-ow container container-center">
+      <p>
+        Hello Everyone, My name is Aritra Chowdhury. I am currently pursuing Btech in Computer Science and Engineering. I am currently in 3rd Year of my college. I live in Kanchrapara. I have done my schooling from Julien Day School, Kalyani. From the childhood days I have a keen interest in programming language Java. I have done and currently doing Web Development and have done some projects on it. You can check all of my works in the project section. I have also done a project on Android app Development using React Native. Currently I am working on my problem solving skills and DSA. I am also into editing and have my own cultural group. I keep myself motivated and energetic by working out.
+      </p>
+    </div>
+    <div class="about-footer">
+    <footer >
+      <div class="footer">
+          <p class="footer-header">Connect to me</p>
+          <ul class="non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/Aritra-art">GitHub</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a></li>
+            <li class="list-item-inline"><a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a></li>
+          </ul>
+        </div>
+        </footer>
+      </div>
 </body>
 </html>
