--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Home | AdarshBalak</title>
 </head>
 <body>
-  <nav class="navigation container">
+  <nav class="navigation container" >
   
     <div class="nav-brand" >IAmDeveloper</div>
     <ul class="non-bullet nav-pills">
@@ -24,20 +24,21 @@
     <h1 class="hero-heading">Adarsh Balak The <span class="heading-inverted">Web Developer</span></h1>
   </div>
   </header>
-  <section class="section ow">
+  <div class="index-margin">
+  <section class="section ow section-border" >
     <h2>Technologies</h2>
     <div class="container-center">
     <p>I am familiar with HTML5, CSS3, Javascript, Java.</p></div>
     </section>
   
-    <section class="section ws">
+    <section class="section ws section-border">
       <h2>Projects</h2>
       <div class="container-center">
       <p>I like to showcase my work and thus, you can see my projects hosted online.</p></div>
       <div class="buttons">
       <a class="primary-link link"href="/project.html">Browse my Projects</a></div>
     </section>
-    <section class="section ow">
+    <section class="section ow section-border">
       <h2>Blogs</h2>
       <div class="container-fluid">
       <p>I am also working on some technical and non-technical blogs. I like to document my journey of learning.</p></div>
@@ -45,6 +46,7 @@
       <a class="secondary-link link"href="/blogs.html">Read my Blogs</a>
     </div>
     </section>
+  </div>
     <footer >
   <div class="footer">
       <p class="footer-header">Connect to me</p>
