--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
   
     <div class="nav-brand" >IAmDeveloper</div>
     <ul class="non-bullet nav-pills">
-      <li class="list-item-inline"><a class="link link-active" href="/">Home</a></li>
+      <li class="list-item-inline"><a class="link " href="/">Home</a></li>
       <li class="list-item-inline"><a class="link" href="/project.html">Projects</a></li>
       <li class="list-item-inline"><a class="link" href="/blogs.html">Blogs</a></li>
-      <li class="list-item-inline"><a class="link" href="/about.html">About</a></li>
+      <li class="list-item-inline"><a class="link link-active" href="/about.html">About</a></li>
     </ul>
   </nav>
   <header > 
