--- a/project.html
+++ b/project.html
@@ -64,7 +64,7 @@
           <strong style="color: var(--primary-colors);" >HTML5, CSS3 JavaScript</strong> 
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="rajtour.netlify.app/#">Visit us</a>
+          <a class="link primary-link" href="https://rajtour.netlify.app/#">Visit us</a>
         </div>
         <div style="padding-top: 2rem;">
           <a class="link secondary-link" href="https://github.com/Aritra-art/Skytours">Github Source Code</a>
@@ -80,7 +80,7 @@
           <strong style="color: var(--primary-colors);" >React-Native Machine Learning HTML5 CSS3 JavaScript</strong> 
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="">Visit us</a>
+          <a class="link primary-link" href="https://www.youtube.com/watch?v=bGlhLiT5fBY">Visit us</a>
         </div>
         <div style="padding-top: 2rem;">
           <a class="link secondary-link" href="https://github.com/Aritra-art/Authenticate-Shopee">Github Source Code</a>
