docs: technologies added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="section ow section-border" >
     <h2>Technologies</h2>
     <div class="container-center">
-    <p>I am familiar with HTML5, CSS3, Javascript, Java.</p></div>
+    <p>I am familiar with <strong>HTML5 CSS3 Javascript Nodejs Git Java.</strong> </p></div>
     </section>
   
     <section class="section ws section-border">
