--- a/project.html
+++ b/project.html
@@ -24,20 +24,35 @@
   </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-w">
+      <li>
+        <h2>Kaun Banega Carorepati ? ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markTwo</span></h2>
+        <small>28th December, 2021</small>
+        <p>This is a quiz based on the popular TV show KBC.It is fun to play and i can share it within my social circle. TechStack used:
+          <strong style="color: var(--primary-colors);" >JavaScript</strong> 
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1">Khel Shuru Kartehe</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati">Github Source Code</a>
+        </div>
+      </li>
+    </div>
+
     <div class="container container-center project-ow">
       <li>
-        <h2>Do You Know Me ?</h2>
+        <h2>Do You Know Me ? ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markOne</span></h2>
         <small>25th December, 2021</small>
         <p>This is a quiz based on DO YOU KNOW ARITRA ??. TechStack used:
           <strong style="color: var(--primary-colors);" >JavaScript</strong> 
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1#index.js">Play It Now</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1">Play It Now</a>
         </div>
         <div style="padding-top: 2rem;">
           <a class="link secondary-link" href="https://github.com/Aritra-art/quiz">Github Source Code</a>
         </div>
-        
       </li>
     </div>
     <div class="container container-center project-w">
@@ -48,7 +63,7 @@
           <strong style="color: var(--primary-colors);" >JavaScript</strong> 
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1#index.js">Play It Now</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1">Play It Now</a>
         </div>
         <div style="padding-top: 2rem;">
           <a class="link secondary-link" href="https://github.com/Aritra-art/QuizMania">Github Source Code</a>
