--- a/index.html
+++ b/index.html
@@ -1,105 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <title>Home | AdarshBalak</title>
-  </head>
-  <body>
-    <nav class="navigation container">
-      <div class="nav-brand">IAmDeveloper</div>
-      <ul class="non-bullet nav-pills">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css" />
+  <title>Home | AdarshBalak</title>
+</head>
+
+<body>
+  <nav class="navigation container">
+    <div class="nav-brand">IAmDeveloper</div>
+    <ul class="non-bullet nav-pills">
+      <li class="list-item-inline">
+        <a class="link link-active" href="/">Home</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="/project.html">Projects</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="/blogs.html">Blogs</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="/about.html">About</a>
+      </li>
+    </ul>
+  </nav>
+  <header>
+    <div class="container hero">
+      <img class="hero-img" src="/images/headerImage.svg" alt="Img link broken" />
+      <h1 class="hero-heading">
+        Aritra Chowdhury The
+        <span class="heading-inverted">Web Developer</span>
+      </h1>
+    </div>
+  </header>
+  <div class="index-margin">
+    <section class="section ow section-border">
+      <h2>Technologies</h2>
+      <div class="container-center">
+        <p>
+          I am familiar with
+          <strong>HTML5 CSS3 Javascript Reactjs Git Github Postman Nodejs Web Hosting Java.</strong>
+        </p>
+      </div>
+    </section>
+
+    <section class="section ws section-border">
+      <h2>Projects</h2>
+      <div class="container-center">
+        <p>
+          I like to showcase my work and thus, you can see my projects hosted
+          online.
+        </p>
+      </div>
+      <div class="buttons">
+        <a class="primary-link link" href="/project.html">Browse my Projects</a>
+      </div>
+    </section>
+    <section class="section ow section-border">
+      <h2>Blogs</h2>
+      <div class="container-fluid">
+        <p>
+          I am also working on some technical and non-technical blogs. I like
+          to document my journey of learning.
+        </p>
+      </div>
+      <div class="buttons">
+        <a class="secondary-link link" href="/blogs.html">Read my Blogs</a>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div class="footer">
+      <p class="footer-header">Connect to me</p>
+      <ul class="non-bullet">
         <li class="list-item-inline">
-          <a class="link link-active" href="/">Home</a>
+          <a class="link" href="https://github.com/Aritra-art">GitHub</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/project.html">Projects</a>
+          <a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/blogs.html">Blogs</a>
+          <a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/about.html">About</a>
+          <a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a>
         </li>
       </ul>
-    </nav>
-    <header>
-      <div class="container hero">
-        <img
-          class="hero-img"
-          src="/images/headerImage.svg"
-          alt="Img link broken"
-        />
-        <h1 class="hero-heading">
-          Aritra Chowdhury The
-          <span class="heading-inverted">Web Developer</span>
-        </h1>
-      </div>
-    </header>
-    <div class="index-margin">
-      <section class="section ow section-border">
-        <h2>Technologies</h2>
-        <div class="container-center">
-          <p>
-            I am familiar with
-            <strong>HTML5 CSS3 Javascript Nodejs Git Java.</strong>
-          </p>
-        </div>
-      </section>
-
-      <section class="section ws section-border">
-        <h2>Projects</h2>
-        <div class="container-center">
-          <p>
-            I like to showcase my work and thus, you can see my projects hosted
-            online.
-          </p>
-        </div>
-        <div class="buttons">
-          <a class="primary-link link" href="/project.html"
-            >Browse my Projects</a
-          >
-        </div>
-      </section>
-      <section class="section ow section-border">
-        <h2>Blogs</h2>
-        <div class="container-fluid">
-          <p>
-            I am also working on some technical and non-technical blogs. I like
-            to document my journey of learning.
-          </p>
-        </div>
-        <div class="buttons">
-          <a class="secondary-link link" href="/blogs.html">Read my Blogs</a>
-        </div>
-      </section>
     </div>
-    <footer>
-      <div class="footer">
-        <p class="footer-header">Connect to me</p>
-        <ul class="non-bullet">
-          <li class="list-item-inline">
-            <a class="link" href="https://github.com/Aritra-art">GitHub</a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://www.facebook.com/aritra.chowdhury.549"
-              >Facebook</a
-            >
-          </li>
-          <li class="list-item-inline">
-            <a
-              class="link"
-              href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/"
-              >Linkedin</a
-            >
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
