--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
         <h2>Portfolio Website ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFour</span></h2>
         <small>12th January, 2021</small>
         <p>This is my Portfolio which showcases all my Projects and related stuffs | TechStack used:
-          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS </strong>|
+          <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
         </p>
         <div style="padding-top: 0.5rem;">
           <a class="link primary-link" href="https://aritraportfolio.netlify.app/">Check Now</a>
