--- a/project.html
+++ b/project.html
@@ -52,10 +52,10 @@
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS </strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="">Live Project</a>
+          <a class="link primary-link" href="https://teditor.netlify.app/">Live Project</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="">Github Source
+          <a class="link secondary-link" href="https://github.com/Aritra-art/TextEditor">Github Source
             Code</a>
         </div>
         <p>markOne repo added to Github
