--- a/project.html
+++ b/project.html
@@ -26,6 +26,18 @@
   </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-w">
+      <li>
+        <h2>Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFive</span></h2>
+        <small>15th January, 2021</small>
+        <p>Adding Blogs to Portfolio | TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="./blogs.html">Read Now</a>
+        </div>
+      </li>
+    </div>
     <div class="container container-center project-ow">
       <li>
         <h2>Portfolio Website ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFour</span></h2>
