--- a/project.html
+++ b/project.html
@@ -28,13 +28,47 @@
   <ul class="non-bullet">
     <div class="container container-center project-ow">
       <li>
+        <h2>Pirate Assistant ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markSix</span></h2>
+        <small>29th August, 2021</small>
+        <p>Made a Translator web-app that assists English to the Pirate language |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://pirateassistant.netlify.app/" target="_blank">Get Assistant</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/PirateAssistant" target="_blank">Github
+            Source Code</a>
+        </div>
+
+      </li>
+    </div>
+    <div class="container container-center project-w">
+      <li>
+        <h2>Talk Banana ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markSix</span></h2>
+        <small>20th January, 2021</small>
+        <p>Made a Translator web-app that converts English to the Banana language | TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://minions-language-translate.netlify.app/" target="_blank">Translate
+            Now</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/TalkBanana" target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
         <h2>Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFive</span></h2>
         <small>15th January, 2021</small>
         <p>Adding Blogs to Portfolio | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="./blogs.html">Read Now</a>
+          <a class="link primary-link" href="./blogs.html" target="_blank">Read Now</a>
         </div>
       </li>
     </div>
@@ -46,10 +80,11 @@
           <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://aritraportfolio.netlify.app/">Check Now</a>
+          <a class="link primary-link" href="https://aritraportfolio.netlify.app/" target="_blank">Check Now</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Portfolio">Github Source Code</a>
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Portfolio" target="_blank">Github Source
+            Code</a>
         </div>
       </li>
     </div>
@@ -64,10 +99,10 @@
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS </strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://teditor.netlify.app/">Live Project</a>
+          <a class="link primary-link" href="https://teditor.netlify.app/" target="_blank">Live Project</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/TextEditor">Github Source
+          <a class="link secondary-link" href="https://github.com/Aritra-art/TextEditor" target="_blank">Github Source
             Code</a>
         </div>
         <p>markOne repo added to Github
@@ -75,10 +110,11 @@
           <strong style="color: var(--primary-colors);">JavaScript </strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1">Live Project</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1"
+            target="_blank">Live Project</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz">Github Source
+          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz" target="_blank">Github Source
             Code</a>
         </div>
         <p>markTwo repo added to Github
@@ -86,11 +122,12 @@
           <strong style="color: var(--primary-colors);">JavaScript </strong>|
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link"
-            href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1">Live Project</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1"
+            target="_blank">Live Project</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati">Github Source
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati"
+            target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -105,11 +142,12 @@
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link"
-            href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1">Khel Shuru Kartehe</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1"
+            target="_blank">Khel Shuru Kartehe</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati">Github Source
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati"
+            target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -123,10 +161,12 @@
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1">Play It Now</a>
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1"
+            target="_blank">Play It Now</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz">Github Source Code</a>
+          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz" target="_blank">Github Source
+            Code</a>
         </div>
       </li>
     </div>
@@ -138,11 +178,13 @@
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1">Play It
+          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1"
+            target="_blank">Play It
             Now</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/QuizMania">Github Source Code</a>
+          <a class="link secondary-link" href="https://github.com/Aritra-art/QuizMania" target="_blank">Github Source
+            Code</a>
         </div>
 
       </li>
@@ -156,10 +198,11 @@
           <strong style="color: var(--primary-colors);">HTML5, CSS3 JavaScript</strong>
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://rajtour.netlify.app/#">Visit us</a>
+          <a class="link primary-link" href="https://rajtour.netlify.app/#" target="_blank">Visit us</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Skytours">Github Source Code</a>
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Skytours" target="_blank">Github Source
+            Code</a>
         </div>
 
       </li>
@@ -173,10 +216,11 @@
           <strong style="color: var(--primary-colors);">React-Native Machine Learning HTML5 CSS3 JavaScript</strong>
         </p>
         <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://www.youtube.com/watch?v=bGlhLiT5fBY">Visit us</a>
+          <a class="link primary-link" href="https://www.youtube.com/watch?v=bGlhLiT5fBY" target="_blank">Visit us</a>
         </div>
         <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Authenticate-Shopee">Github Source Code</a>
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Authenticate-Shopee" target="_blank">Github
+            Source Code</a>
         </div>
 
       </li>
