--- a/project.html
+++ b/project.html
@@ -26,6 +26,61 @@
   </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-w">
+      <li>
+        <h2>Cash-Register-Manager ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markTen</span>
+        </h2>
+        <small>28th January, 2021</small>
+        <p>Cash-Manager: helping the client by telling how can he/she can return the change to the customer with minimum
+          number of notes! | TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://denominations.netlify.app/" target="_blank">Get Help</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/CashRegister" target="_blank">Github
+            Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Music Recommender ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markNine</span></h2>
+        <small>30th August, 2021</small>
+        <p>Made a own personalized music recommender web-app. The web-app has selected Artists and their songs.
+          |TechStack :
+          <strong style="color: var(--primary-colors);">Reactjs</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://music-recommender-wine.vercel.app/" target="_blank">Listen Now</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Music-Recommender" target="_blank">Github
+            Source Code</a>
+        </div>
+
+      </li>
+    </div>
+    <div class="container container-center project-w">
+      <li>
+        <h2>Code-O-Country ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markEight</span></h2>
+        <small>25th January, 2021</small>
+        <p>Made a country code web-app that helps to find the code of the entered country. | TechStack used:
+          <strong style="color: var(--primary-colors);">Reactjs</strong>|
+        </p>
+        <div style="padding-top: 0.5rem;">
+          <a class="link primary-link" href="https://csb-k4yv3.netlify.app/" target="_blank">Find
+            Code</a>
+        </div>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link" href="https://github.com/Aritra-art/Code-O-Country" target="_blank">Github
+            Source
+            Code</a>
+        </div>
+      </li>
+    </div>
     <div class="container container-center project-ow">
       <li>
         <h2>Pirate Assistant ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markSeven</span></h2>
