--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
       <p class="footer-header">Connect to me</p>
       <ul class="non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/Aritra-art">GitHub</a>
+          <a class="link linkOne" href="https://github.com/Aritra-art">GitHub</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
+          <a class="link linkTwo" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a>
+          <a class="link linkThree" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a>
+          <a class="link linkFour" href="https://t.me/Aritra_chowdhury">Telegram</a>
         </li>
       </ul>
     </div>
