--- a/project.html
+++ b/project.html
@@ -35,14 +35,22 @@
           number of notes! | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://denominations.netlify.app/" target="_blank">Get Help</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/CashRegister" target="_blank">Github
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://denominations.netlify.app/"
+            target="_blank">Get Help</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/CashRegister"
+            target="_blank">Github
             Source
             Code</a>
         </div>
+        <!-- <div style="padding-top: 1rem;">
+
+        </div>
+        <div style="padding-top: 3rem;">
+
+        </div> -->
       </li>
     </div>
     <div class="container container-center project-ow">
@@ -53,13 +61,21 @@
           |TechStack :
           <strong style="color: var(--primary-colors);">Reactjs</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://music-recommender-wine.vercel.app/" target="_blank">Listen Now</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Music-Recommender" target="_blank">Github
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://music-recommender-wine.vercel.app/"
+            target="_blank">Listen Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Music-Recommender" target="_blank">Github
             Source Code</a>
         </div>
+        <!-- <div style="padding-top: 0.5rem;">
+         
+        </div>
+        <div style="padding-top: 2rem;">
+        
+        </div> -->
 
       </li>
     </div>
