--- a/project.html
+++ b/project.html
@@ -28,6 +28,48 @@
   <ul class="non-bullet">
     <div class="container container-center project-w">
       <li>
+        <h2>Do you know Triangles ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markTwelve</span>
+        </h2>
+        <small>4th February, 2021</small>
+        <p>A website which has info about angles, area and hypotenuse. It also have a quiz based on Triangles which
+          would check your knowledge | TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://tri-angle-check.netlify.app/"
+            target="_blank">Try Triangles</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Triangle_Mania"
+            target="_blank">Github
+            Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Is your Birthday Lucky? ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markEleven</span>
+        </h2>
+        <small>2nd February, 2021</small>
+        <p>A web-app which tells whether your birthday is lucky or not based on your lucky number
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://birth-date-luck.netlify.app/"
+            target="_blank">Check Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/LuckyBirthday"
+            target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-w">
+      <li>
         <h2>Cash-Register-Manager ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markTen</span>
         </h2>
         <small>28th January, 2021</small>
