--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -174,7 +174,7 @@
     </div>
   </ul>
   <div style="display: flex;  align-items: center; justify-content: center;"> <a class="link secondary-link"
-      href="./project.html" target="_blank">Neog Camp
+      href="./project.html">Neog Camp
       Projects</a>
   </div>
 
